--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,9 @@ body {
 }
 
 .root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -39,7 +42,7 @@ canvas {
   height: 50px;
   width: 800px;
   background: #222;
-  position: relative;
+  position: absolute;
 }
 
 .top-bar {
@@ -112,4 +115,30 @@ canvas {
   border: 2px solid #333;
   box-sizing: border-box;
   display: none;
+}
+
+.lose-screen {
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 200px;
+  height: 150px;
+  border: 2px solid #333;
+}
+
+.lose-screen h1 {
+  color: magenta;
+  margin-bottom: 20px;
+}
+
+.lose-screen button {
+  background: #444444;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  border: 2px solid #444;
+  cursor: pointer;
 }
