--- a/src/css/style.css
+++ b/src/css/style.css
@@ -107,22 +107,24 @@ canvas {
   font-size: 11px;
 }
 
-.lose-screen {
+.lose-screen,
+.win-screen {
   background: black;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 200px;
-  height: 150px;
+  padding: 24px;
   border: 2px solid #333;
 }
 
+.lose-screen h1,
 .lose-screen h1 {
   margin-bottom: 20px;
 }
 
-.lose-screen button {
+.lose-screen button,
+.win-screen button {
   background: #444444;
   color: white;
   border: none;
@@ -142,8 +144,17 @@ canvas {
 }
 
 .level-button {
-  padding: 12px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   background: #333;
   margin: 4px;
   cursor: pointer;
+}
+
+.level-button:hover {
+  background: #444;
 }
