--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,7 +40,7 @@ canvas {
 .top-bar,
 .bottom-bar {
   height: 50px;
-  width: 800px;
+  width: 850px;
   background: #222;
   position: absolute;
 }
@@ -147,6 +147,15 @@ canvas {
 
 .stars {
   font-size: 32px;
+  margin-bottom: 16px;
+}
+
+.button-wrapper {
+  display: flex;
+}
+
+.button-wrapper button:not(:first-of-type) {
+  margin-left: 16px;
 }
 
 .level-grid {
