--- a/src/css/style.css
+++ b/src/css/style.css
@@ -129,6 +129,7 @@ canvas {
   flex-direction: column;
   padding: 24px;
   border: 2px solid #333;
+  position: relative;
 }
 
 .lose-screen h1,
@@ -255,4 +256,10 @@ canvas {
 
 .research-item:not(:last-of-type) {
   margin-right: 8px;
+}
+
+.credits {
+  position: absolute;
+  right: 24px;
+  top: 40px;
 }
