--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,7 +58,8 @@ canvas {
   justify-content: center;
 }
 
-.top-bar-left {
+.top-bar-left,
+.top-bar-right {
   display: flex;
 }
 
@@ -121,7 +122,8 @@ canvas {
 .lose-screen,
 .win-screen,
 .menu-screen,
-.research-screen {
+.research-screen,
+.pause-dialog {
   background: black;
   display: flex;
   align-items: center;
@@ -188,10 +190,21 @@ canvas {
   background: #444;
 }
 
-.research-button {
+.margin-bottom {
+  margin-bottom: 16px;
+}
+
+.button-wrapper {
+  display: flex;
+}
+
+.button-wrapper > .button:not(last-of-type) {
+  margin-left: 16px;
+}
+
+.button {
   background: #333;
-  width: 108px;
-  padding: 12px 0;
+  padding: 12px 24px;
   display: flex;
   justify-content: center;
   cursor: pointer;
